--- a/sass/portal.scss
+++ b/sass/portal.scss
@@ -21,6 +21,17 @@
 }
 
 
+.navsearch{
+	height: 200px;
+	background-color: #0b6c1d;
+	background-image: linear-gradient(to bottom, transparent, rgba(0,0,0,.4));
+}
+
+.navsearch .input-group{
+	margin-top: 80px;
+}
+
+
 
 
 .search-item {
@@ -76,12 +87,25 @@
 	          box-shadow: 0 5px 10px rgba(0,0,0,.2);
 	}
 
-.tt-suggestion:hover {
-  cursor: pointer;
-  color: #fff;
-  background-color: #0097cf;
+	.tt-suggestion:hover {
+	  cursor: pointer;
+	  color: #fff;
+	  background-color: #0097cf;
+	}
 }
 
+
+
+.idxitem{
+	margin-top: 16px;
+
+	h1{
+		font-size: 24px;
+	}
+
+	p{
+		text-align: justify;
+	}
 }
 
 
@@ -104,5 +128,5 @@
 footer {
 	margin-top: 40px;
 	height: 100px;
-	background-color: #000000;
+	background-color: #0b6c1d	;
 }
